[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bolt-api"
version = "0.1.0"
description = "A lightning-fast Python web framework using Granian and msgspec."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nirav Trivedi", email = "nirav.trivedi30@gmail.com"}
]
dependencies = [
    "starlette",
    "msgspec",
    "granian"
]

[project.urls]
"Homepage" = "https://github.com/ntrivedi30/bolt"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

